# ptsu-code

./: .coverage  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_scenarios.sh
docs/: 2_agentic-loop-and-coordinator.md  README.md  e2e-evaluation-results-20260405.md  e2e-evaluation.md  e2e-test-guide.md  imple-plan.md  setup-cli-foundation.md  testing-best-practices.md
src/ptsu_code/: __init__.py  __main__.py  config.py  exceptions.py
src/ptsu_code/agent/: __init__.py  runtime.py
src/ptsu_code/agent/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
src/ptsu_code/agent/tools/: __init__.py  base.py  command_tool.py  file_tools.py  registry.py
src/ptsu_code/cli/: __init__.py  app.py  prompt.py  ui.py
tests/: __init__.py  test_config.py  test_exceptions.py  test_main.py
tests/agent/: __init__.py
tests/agent/tools/: __init__.py  test_base.py  test_command_tool.py  test_file_tools.py  test_registry.py
tests/cli/: __init__.py  test_app.py  test_prompt.py  test_ui.py
